# OpenGL-2D-Rendering-Methods

./: .gitignore  CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: base_renderer.h  benchmark.cpp  bunnymark.h  common.cpp  common.h  main.cpp  primitive_test.cpp
src/renderers/: batch_renderer.cpp  batch_renderer.h  geometry_batch_renderer.cpp  geometry_batch_renderer.h  geometry_renderer.cpp  geometry_renderer.h  instance_renderer.cpp  instance_renderer.h  instance_renderer_cpu.cpp  instance_renderer_cpu.h  naive_renderer.cpp  naive_renderer.h
